src/components/css/custom.css
/* Before adding custom CSS, think about if it rather should be in Spirit */

/* Usage: <mark>Highlight</mark> */
mark {
    background-color: #fdffb6;
}

/* Usage: <kbd>Cmd</kbd> + <kbd>Shift</kbd> */
kbd {
    display: inline-block;
    padding: 0.35em 0.42em;
    font: 0.8em "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
    line-height: 1em;
    color: #444d56;
    vertical-align: middle;
    background-color: #fafbfc;
    border: solid 1px #c6cbd1;
    border-bottom-color: #959da5;
    border-radius: 3px;
    box-shadow: inset 0 -1px 0 #959da5;
    display: inline-block;
}


/* Media queries copied from Spirit */
/* @custom-media --breakpoint-not-small screen and (min-width: 44rem);
@custom-media --breakpoint-medium screen and (min-width: 44rem) and (max-width: 66rem);
@custom-media --breakpoint-large screen and (min-width: 66rem); */

/* Custom typography for UI */
.lh-h1 { line-height: var(--vr-8); }
.lh-h2 { line-height: var(--vr-5); }
.lh-h3 { line-height: var(--vr-4); }
.lh-h4 { line-height: var(--vr-3); }
.lh-h5 { line-height: var(--vr-3); }
.lh-h6 { line-height: var(--vr-3); }
.lh-p  { line-height: var(--vr-3); }
.lh-small  { line-height: var(--vr-3); }
.lh-tiny  { line-height: var(--vr-2); }
.lh-1-0 { line-height: 1em; }

.ws-normal { white-space: normal; }
.nowrap { white-space: nowrap; }
.pre { white-space: pre; }

@media (--breakpoint-not-small) {
    .lh-h1-ns { line-height: var(--vr-8); }
    .lh-h2-ns { line-height: var(--vr-5); }
    .lh-h3-ns { line-height: var(--vr-4); }
    .lh-h4-ns { line-height: var(--vr-3); }
    .lh-h5-ns { line-height: var(--vr-3); }
    .lh-h6-ns { line-height: var(--vr-3); }
    .lh-p-ns  { line-height: var(--vr-3); }
    .lh-small-ns  { line-height: var(--vr-3); }
    .lh-tiny-ns  { line-height: var(--vr-2); }
    .lh-1-0-ns { line-height: 1em; }
}

@media (--breakpoint-medium) {
    .lh-h1-m { line-height: var(--vr-8); }
    .lh-h2-m { line-height: var(--vr-5); }
    .lh-h3-m { line-height: var(--vr-4); }
    .lh-h4-m { line-height: var(--vr-3); }
    .lh-h5-m { line-height: var(--vr-3); }
    .lh-h6-m { line-height: var(--vr-3); }
    .lh-p-m  { line-height: var(--vr-3); }
    .lh-small-m  { line-height: var(--vr-3); }
    .lh-tiny-m  { line-height: var(--vr-2); }
    .lh-1-0-m { line-height: 1em; }
}

@media (--breakpoint-large) {
    .lh-h1-l { line-height: var(--vr-8); }
    .lh-h2-l { line-height: var(--vr-5); }
    .lh-h3-l { line-height: var(--vr-4); }
    .lh-h4-l { line-height: var(--vr-3); }
    .lh-h5-l { line-height: var(--vr-3); }
    .lh-h6-l { line-height: var(--vr-3); }
    .lh-p-l  { line-height: var(--vr-3); }
    .lh-small-l  { line-height: var(--vr-3); }
    .lh-tiny-l  { line-height: var(--vr-2); }
    .lh-1-0-l { line-height: 1em; }
}

.word-normal { word-break: normal; }
.word-wrap { word-break: break-all; }
.word-nowrap { word-break: keep-all; }

/* Needed for tutorials */
.flex-third {
    flex: 1 1 calc(100% / 3 - 40px);
}

/* _measure.css */
.measure-0-4 { letter-spacing: 0.4px; }
.measure-0-2 { letter-spacing: 0.2px; }
.measure--0-2 { letter-spacing: -0.2px; }
.measure--0-4 { letter-spacing: -0.4px; }
.measure--1-0 { letter-spacing: -1.0px; }

/* Overriding max page width */
.mw-xl { max-width: 128.0rem; }
.mw-m { max-width: 80.0rem; }

.miw-toc {
    min-width: 18rem;
}

.miw-sidebar {
    min-width: 22rem;
}

.w-sidebar {
    width: 22rem;
}
@media (--breakpoint-not-small) { .w-sidebar-ns { width: 22rem; } }
@media (--breakpoint-medium) { .w-sidebar-m { width: 22rem; } }
@media (--breakpoint-large) { .w-sidebar-l { width: 22rem; } }

.h0 { 
    height: 0;
}
@media (--breakpoint-not-small) { 
    .h0-ns { height: 0; } 
    .h-auto-ns {     height: auto; }  /* < This needs to be here because of the mobile 
                                           navigation menu. Should be deleted if copied to Spirit */
}
@media (--breakpoint-medium) { .h0-m { height: 0; } }
@media (--breakpoint-large) { .h0-l { height: 0; } }

.mw-content {
    max-width: 76rem;
}

.pv6px {
    padding-top: 6px;
    padding-bottom: 6px;
}

/* margins */
.ma-auto {
    margin: auto;
}

/* _links.css */
.link {
    text-decoration: none;
    transition: color .3s ease;
}

.link:link,
.link:visited {
    transition: all .15s ease;
}
.link:hover   {
    transition: all .15s ease;
}
.link:active  {
    transition: all .15s ease;
}
.link:focus   {
    transition: all .15s ease;
    outline: 1px dotted currentColor;
}


.br5 {
    border-radius: 10%;
}

.white-placeholder::placeholder { /* Most modern browsers support this now. */
    color: rgba(255, 255, 255, 0.7);
}

.dark-placeholder::placeholder { /* Most modern browsers support this now. */
    color: var(--lightgrey-d2);
}

/* Text styles */
.tdn {
    text-decoration: none;
}

/* Fixing those shadows */
.box-shadow-hover {
    transition: all 0.8s ease;
}

.shadow-1 {
    box-shadow: 0 0 1px rgba(0,0,0,.06), 0 2px 6px rgba(0,0,0,.03);
}
.shadow-1.on-white {
    box-shadow: 0 0 1px rgba(0,0,0,.15), 0 2px 4px rgba(0,0,0,.04);
}
.shadow-1-hover:hover {
    box-shadow: 0 0 5px rgba(0,0,0,.02), 0 5px 22px -6px rgba(0,0,0,.1);
    transform: scale(1.02);
    transition: all 0.3s ease;
}
.shadow-1-hover.on-white:hover {
    box-shadow: 0 0 1px rgba(0,0,0,.15), 0 5px 22px -6px rgba(0,0,0,.1);
    transition: all 0.3s ease;
}

.shadow-2 {
    box-shadow: 0 0 5px rgba(0,0,0,.02), 0 5px 22px -6px rgba(0,0,0,.1);
}
.shadow-2.on-white {
    box-shadow: 0 0 3px rgba(0,0,0,.08), 0 5px 22px -6px rgba(0,0,0,.08);
}
.shadow-2-hover:hover {
    transform: scale(1.05);
    box-shadow: 0 0 1px rgba(0,0,0,.03), 0 8px 26px -4px rgba(0,0,0,.1);
    transition: all 0.3s ease;
}
.shadow-2-hover.on-white:hover {
    box-shadow: 0 0 3px rgba(0,0,0,.08), 0 8px 26px -4px rgba(0,0,0,.1);
    transition: all 0.3s ease;
}

.shadow-3 {
    box-shadow: 0 0 1px rgba(0,0,0,.03), 0 10px 32px -5px rgba(0,0,0,.1);
}
/* ... */

